@@ -1,10 +1,12 @@
 package edu.mcw.scge.load;
 
+import edu.mcw.rgd.process.Utils;
 import edu.mcw.scge.Manager;
 import edu.mcw.scge.Mean;
 
 // study loaded on DEV on Nov 22, 2022
 // study loaded on DEV on Nov 28, 2022
+// study loaded on DEV on Dec 13, 2022
 
 public class Murray_GER12 {
 
@@ -27,14 +29,14 @@ public class Murray_GER12 {
             // 2 columns of numeric data
             for( int column=3; column<3+2; column++ ) { // 0-based column in the excel sheet
                 String name = "Condition 1"; //exp record name to be loaded, if not present
-                manager.loadMetaData(column, name, false);
+                manager.loadMetaData(column, name, false, true);
             }
             manager.info("=== numeric metadata loaded");
 
             Mean.loadMean(manager.experimentId, manager);
 
         } catch (Exception e) {
-            e.printStackTrace();
+            Utils.printStackTrace(e, manager.getLog());
         }
 
         manager.finish();
