@@ -1,3 +1,6 @@
+Dec 13, 2022
+  5 Murray studies reloaded: added a way to load cell model associated with animal model
+
 Nov 22, 2022
   updated loading of In Vitro data
 
